...
                                            ),
                                        indicatorColor:
                                            FlutterFlowTheme.of(context)
                                                .primary,
                                        tabs: [
                                          Tab(
                                            key: ValueKey('SignupTab_9kj5'),
                                            text: 'Sign Up',
                                          ),
                                          Tab(
                                            key: ValueKey('LoginTab_lptw'),
                                            text: 'Login',
                                          ),
                                        ],
                                        controller: _model.tabBarController,
                                        onTap: (i) async {
                                          [() async {}, () async {}][i]();
...
                                                                    Container(
                                                                  width: double
                                                                      .infinity,
                                                                  child:
                                                                      TextFormField(
                                                                    key: ValueKey(
                                                                        'Signup-Email_8o0v'),
                                                                    controller:
                                                                        _model
                                                                            .signupEmailTextController,
                                                                    focusNode:
                                                                        _model
                                                                            .signupEmailFocusNode,
...
                                                                    Container(
                                                                  width: double
                                                                      .infinity,
                                                                  child:
                                                                      TextFormField(
                                                                    key: ValueKey(
                                                                        'Signup-Password_ytkh'),
                                                                    controller:
                                                                        _model
                                                                            .signupPasswordTextController,
                                                                    focusNode:
                                                                        _model
                                                                            .signupPasswordFocusNode,
...
                                                              Container(
                                                                width: double
                                                                    .infinity,
                                                                child:
                                                                    TextFormField(
                                                                  key: ValueKey(
                                                                      'TextField_cz4m'),
                                                                  controller: _model
                                                                      .confirmPasswordTextController0,
                                                                  focusNode: _model
                                                                      .textFieldFocusNode,
                                                                  autofocus:
                                                                      false,
...
                                                                  0.0,
                                                                  0.0),
                                                      child: Container(
                                                        width: double.infinity,
                                                        child: TextFormField(
                                                          key: ValueKey(
                                                              'Login-Email_l6a9'),
                                                          controller: _model
                                                              .loginEmailTextController,
                                                          focusNode: _model
                                                              .loginEmailFocusNode,
                                                          onChanged: (_) =>
                                                              EasyDebounce
...
                                                                  0.0,
                                                                  20.0),
                                                      child: Container(
                                                        width: double.infinity,
                                                        child: TextFormField(
                                                          key: ValueKey(
                                                              'Login-Password_da90'),
                                                          controller: _model
                                                              .loginPasswordTextController,
                                                          focusNode: _model
                                                              .loginPasswordFocusNode,
                                                          autofocus: false,
                                                          obscureText: !_model
...
                        ),
                      ),
                      Stack(
                        children: [
                          if (_model.tabBarPreviousIndex == 1)
                            FFButtonWidget(
                              key: ValueKey('loginButton_xqjb'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'ACCOUNT_LOGIN_SIGNUP_loginButton_ON_TAP');
                                logFirebaseEvent('loginButton_auth');
                                GoRouter.of(context).prepareAuthEvent();

...
                                elevation: 0.0,
                                borderRadius: BorderRadius.circular(8.0),
                              ),
                            ),
                          if (_model.tabBarPreviousIndex == 0)
                            FFButtonWidget(
                              key: ValueKey('signupButton_ycpn'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'ACCOUNT_LOGIN_SIGNUP_signupButton_ON_TAP');
                                logFirebaseEvent('signupButton_validate_form');
                                if (_model.formKey1.currentState == null ||
                                    !_model.formKey1.currentState!.validate()) {
...
