...
                                    currentUserReference!)
                                .set(createRoommatePrefRecordData(
                              wakeUp: 'Mid-morning',
                            ));
                          },
                          child: Container(
                            key: ValueKey('Container_4kl9'),
                            width: 90.0,
                            height: 25.0,
                            decoration: BoxDecoration(
                              color: _model.isSelectedMid == true
                                  ? FlutterFlowTheme.of(context).secondary
                                  : FlutterFlowTheme.of(context)
...
                                    currentUserReference!)
                                .set(createRoommatePrefRecordData(
                              goToBed: 'Early',
                            ));
                          },
                          child: Container(
                            key: ValueKey('Container_j5ua'),
                            width: 50.0,
                            height: 25.0,
                            decoration: BoxDecoration(
                              color: _model.isBedEarly == true
                                  ? FlutterFlowTheme.of(context).secondary
                                  : FlutterFlowTheme.of(context)
...
                                    currentUserReference!)
                                .set(createRoommatePrefRecordData(
                              quietOrSocial: 'Social',
                            ));
                          },
                          child: Container(
                            key: ValueKey('Container_ehqi'),
                            width: 50.0,
                            height: 25.0,
                            decoration: BoxDecoration(
                              color: _model.isSocial == true
                                  ? FlutterFlowTheme.of(context).secondary
                                  : FlutterFlowTheme.of(context)
...
                                    currentUserReference!)
                                .set(createRoommatePrefRecordData(
                              shareOrSeparate: 'Separate',
                            ));
                          },
                          child: Container(
                            key: ValueKey('Container_ysjr'),
                            width: 50.0,
                            height: 25.0,
                            decoration: BoxDecoration(
                              color: _model.isSeparate == true
                                  ? FlutterFlowTheme.of(context).secondary
                                  : FlutterFlowTheme.of(context)
...
                                    currentUserReference!)
                                .set(createRoommatePrefRecordData(
                              pets: 'No',
                            ));
                          },
                          child: Container(
                            key: ValueKey('Container_k98a'),
                            width: 50.0,
                            height: 25.0,
                            decoration: BoxDecoration(
                              color: _model.isNoPet == true
                                  ? FlutterFlowTheme.of(context).secondary
                                  : FlutterFlowTheme.of(context)
...
                                    currentUserReference!)
                                .set(createRoommatePrefRecordData(
                              allergies: 'No',
                            ));
                          },
                          child: Container(
                            key: ValueKey('Container_53c8'),
                            width: 50.0,
                            height: 25.0,
                            decoration: BoxDecoration(
                              color: _model.isNoAllergy == true
                                  ? FlutterFlowTheme.of(context).secondary
                                  : FlutterFlowTheme.of(context)
...
                                    currentUserReference!)
                                .set(createRoommatePrefRecordData(
                              quietSpace: 'Yes',
                            ));
                          },
                          child: Container(
                            key: ValueKey('Container_vju0'),
                            width: 50.0,
                            height: 25.0,
                            decoration: BoxDecoration(
                              color: _model.isYesStudy == true
                                  ? FlutterFlowTheme.of(context).secondary
                                  : FlutterFlowTheme.of(context)
...
                                ),
                        elevation: 0.0,
                        borderRadius: BorderRadius.circular(8.0),
                      ),
                    ),
                    FFButtonWidget(
                      key: ValueKey('Button_e0vq'),
                      onPressed: () async {
                        logFirebaseEvent(
                            'ROOMIE_PREFERENCES_COMPLETE_BTN_ON_TAP');
                        logFirebaseEvent('Button_navigate_to');

                        context
...
