...
                                    scrollDirection: Axis.horizontal,
                                    child: Row(
                                      mainAxisSize: MainAxisSize.max,
                                      children: [
                                        Expanded(
                                          child: FlutterFlowChoiceChips(
                                            key: ValueKey('ChoiceChips_2dog'),
                                            options: [
                                              ChipData('All'),
                                              ChipData('Messages')
                                            ],
                                            onChanged: (val) => safeSetState(
                                                () => _model.choiceChipsValue =
...
                                                'GENERAL_LISTINGS_STUDENTS_ListView_40cq0');
                                            logFirebaseEvent(
                                                'ListView_google_analytics_event');
                                            logFirebaseEvent('');
                                          },
                                          child: ListView.builder(
                                            key: ValueKey('ListView_4h0r'),
                                            padding: EdgeInsets.zero,
                                            primary: false,
                                            shrinkWrap: true,
                                            scrollDirection: Axis.vertical,
                                            itemCount:
                                                propertiesNoSearch.length,
...
                                                      borderRadius:
                                                          BorderRadius.circular(
                                                              12.0),
                                                    ),
                                                    child: Container(
                                                      key: ValueKey(
                                                          'Container_dhrj'),
                                                      width: double.infinity,
                                                      decoration: BoxDecoration(
                                                        color: FlutterFlowTheme
                                                                .of(context)
                                                            .secondaryBackground,
                                                        borderRadius:
...
